release/ga/prod/v1.2.1/RELEASE-NOTES.md
# GG-CMS Release Archive — v1.2.1 (prod)

- **Target Environment**: prod
- **Release Version**: v1.2.1
- **Build Timestamp**: 2026-09-20T06:18:53Z
- **Git Commit**: da1a0b0

## Component Version Matrix
- **React UI**: v1.2.1
- **Go Backend**: v1.2.1
- **DB Migrations**: v1.2.1
- **AI Content Factory**: v1.2.1

## Deployment Contract & Security Signature
- **API Contract Version**: v1
- **Deployment Contract**: [deployment-contract.json](./deployment-contract.json)
- **Version Manifest**: [version-manifest.json](./version-manifest.json)

## Recent Change Log (Git Commits)
```
da1a0b0 release(prod): GA v1.2.0 - high-contrast article/course reader styling and auto scroll TOC navigation
461020c release: generate GA release v1.1.6 and sync release branch
f84975b fix(import): add missing useMemo import in BulkImport.tsx
f045559 test: exclude e2e Playwright specs from Vitest unit test runner
37f8f12 fix(ui): improve loading skeletons and route slug matching across frontend pages
2881b60 fix(import): resolve loading states, client parsing edge cases, and API response extraction
c8f4bb4 UI: Ensure publicQuickEdit permission evaluation handles all group permission schemas
61298af UI: Unify PublicCourseView to use interactive CourseViewPage
17bda1f feat(taxonomy): add migration 040 to seed subcategories and specialized SME tags across engineering domains
94f59b5 chore(version): bump version to 1.1.21
```
